# src/Pinventory.Pins.Api/openapi/Pinventory.Pins.Api.json
@@ -376,6 +376,69 @@
         }
       }
     },
+    "/imports/{archiveJobId}/renew": {
+      "post": {
+        "tags": [
+          "ImportingEndpointsExtensions"
+        ],
+        "operationId": "RenewImport",
+        "parameters": [
+          {
+            "name": "archiveJobId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HttpValidationProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/imports/{archiveJobId}/cancel": {
       "post": {
         "tags": [
