# src/Pinventory.Pins.Application/Importing/ImportCommandHandler.cs
@@ -42,17 +42,6 @@ public sealed class ImportCommandHandler(
         var archiveJobIdResult = await client.InitiateAsync(cancellationToken: cancellationToken);
         if (archiveJobIdResult.IsFailed)
         {
-            if (archiveJobIdResult.HasError<Errors.Import.ArchiveJobExists>())
-            {
-                var currentImport = await dbContext.GetCurrentImport(command.UserId, cancellationToken);
-                if (currentImport is not null)
-                {
-                    await bus.ScheduleAsync(new CheckJobMessage(currentImport.Id, currentImport.UserId, currentImport.ArchiveJobId!),
-                        CheckJobMessage.CheckInterval);
-                    return Result.Ok(currentImport.ArchiveJobId!).ToResultDto();
-                }
-            }
-
             logger.LogError("Failed to initiate archive job: {Errors}", archiveJobIdResult.Errors);
             return Result.Fail<string>(archiveJobIdResult.Errors).ToResultDto();
         }
@@ -60,9 +49,7 @@ public sealed class ImportCommandHandler(
         var archiveJobId = archiveJobIdResult.Value;
 
         var import = new Import(command.UserId, periodResult.Value);
-        var result = await import.StartAsync(archiveJobId, concurrencyPolicy);
-
-        if (result.IsFailed)
+        if (await import.StartAsync(archiveJobId, concurrencyPolicy) is { IsFailed: true } result)
         {
             return Result.Fail<string>(result.Errors).ToResultDto();
         }
@@ -75,25 +62,43 @@ public sealed class ImportCommandHandler(
         return Result.Ok(archiveJobId).ToResultDto();
     }
 
+    public async Task<ResultDto> HandleAsync(RenewImportCommand command, CancellationToken cancellationToken = default)
+    {
+        logger.LogInformation("Renewing import '{ArchiveJobId}' for {UserId}", command.ArchiveJobId, command.UserId);
+        if (await dbContext.GetCurrentImport(command.UserId, cancellationToken) is not { } import)
+        {
+            return Result.Fail<string>(Errors.Import.RunningImportNotFound(command.UserId, command.ArchiveJobId)).ToResultDto();
+        }
+
+        if (import.ClearBatches() is { IsFailed: true } result)
+        {
+            return Result.Fail<string>(result.Errors).ToResultDto();
+        }
+
+        await RaiseEventsAsync(import);
+
+        await bus.ScheduleAsync(new CheckJobMessage(import.Id, import.UserId, import.ArchiveJobId!), CheckJobMessage.CheckInterval);
+
+        return ResultDto.Ok();
+    }
+
+
     public async Task<ResultDto> HandleAsync(CancelImportCommand command, CancellationToken cancellationToken = default)
     {
         logger.LogInformation("Cancelling import '{ArchiveJobId}' for {UserId}", command.ArchiveJobId, command.UserId);
-
-        var import = await dbContext.GetCurrentImport(command.UserId, cancellationToken);
-        if (import is null)
+        if (await dbContext.GetCurrentImport(command.UserId, cancellationToken) is not { } import)
         {
             return Result.Fail(Errors.Import.RunningImportNotFound(command.UserId, command.ArchiveJobId)).ToResultDto();
         }
 
         var clientResult = await factory.CreateAsync(command.UserId, cancellationToken);
-        if (clientResult.IsFailed)
+        if (clientResult is { IsFailed: true })
         {
             return Result.Fail<string>(clientResult.Errors).ToResultDto();
         }
 
         var client = clientResult.Value;
-        var cancelResult = await client.CancelJobAsync(command.ArchiveJobId, cancellationToken);
-        if (cancelResult.IsFailed)
+        if (await client.CancelJobAsync(command.ArchiveJobId, cancellationToken) is { IsFailed: true } cancelResult)
         {
             var failResult = import.Fail(cancelResult.Errors[0]);
             if (failResult.IsFailed)
@@ -105,8 +110,7 @@ public sealed class ImportCommandHandler(
             return Result.Fail(errors).ToResultDto();
         }
 
-        var result = import.Cancel();
-        if (result.IsFailed)
+        if (import.Cancel() is { IsFailed: true } result)
         {
             logger.LogError("Failed to cancel import job: {Errors}", result.Errors);
             return Result.Fail(result.Errors).ToResultDto();
